# voxel-game

./: Cargo.toml  perf.data
src/: main.rs
src/client/: app.rs  camera.rs  component.rs  handle_input.rs  init.rs  input.rs  mod.rs  rsc.rs  state.rs  window.rs
src/client/render/: buf.rs  command.rs  instance.rs  mod.rs  renderer.rs  storage.rs  thread.rs  uniform.rs
src/client/render/util/: array.rs  buf.rs  mod.rs  storage.rs  texture.rs  timer.rs  uniform.rs  vertex.rs
src/client/render/voxel/: color.rs  group.rs  light.rs  mod.rs  pipeline.rs  shader.wgsl  shader_stuff.wgsl  view.rs
src/client/render/voxel/poly/: color.rs  face.rs  group.rs  mod.rs  shader.wgsl  view.rs
src/client/render/voxel/ray/: color.rs  mod.rs  shader_stuff.wgsl
src/client/render/voxel/ray_oct/: chunk.rs  compute.wgsl  compute_old.wgsl  layout.rs  (+6 more)
src/client/render/voxel_poly/: instance.rs  mod.rs  shader.wgsl  view.rs
src/client/render_vulkan/: command.rs  mod.rs
src/client/render_vulkan/voxel/: mod.rs
src/client/system/: mod.rs  render.rs  voxel_grid.rs
src/common/: message.rs  mod.rs
src/common/component/: chunk.rs  grid.rs  mod.rs
src/common/component/chunk/: mesh.rs  mod.rs
src/server/: chunk.rs  client.rs  mod.rs  rsc.rs  test.rs
src/server/chunk/: load.rs
src/server/generation/: mod.rs
src/server/system/: sync.rs
src/sync/: mod.rs  thread.rs
src/util/: math.rs  mod.rs  oct_tree.rs  swap_buf.rs  thread.rs  timer.rs  tracked_grid.rs
src/world/: chunk.rs  component.rs  event.rs  mod.rs
src/world/ecs/: component.rs  mod.rs  world.rs
src/world/generation/: mod.rs
(+11 files in other folders)
