[package]
name = "pixelgame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-Z", "threads=14"]

[dependencies]
bytemuck = {version="1.14.0", features=["derive"]}
nalgebra = {version="0.32.5", features=["bytemuck"]}
ndarray = "0.15.6"
pollster = "0.3"
rand = "0.8.5"
simba = "0.8.1"
smaa = "0.14.0"
wgpu = "0.20.1"
bevy_ecs = "0.13.2"
bevy_derive = "0.13.2"
winit = {version="0.30.1", features=["serde"]}
